[package]
name = "wiki_game_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.19.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
once_cell = "1"
reqwest = "0.12"
clap = { version = "4.4.1", features = ["derive"] }
clap_complete = { version = "4.4.1" }
log = "0.4.21"
petgraph = "0.6.4"
itertools = "0.12.1"
rand = "0.8.5"
clap-num = "1.1.1"
